parser.output
Nonterminals useless in grammar

   io_list
   more_io_list


Terminals unused in grammar

   TK_PR_WHILE
   TK_PR_DO
   TK_PR_FOR
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_BREAK
   TK_PR_CONTINUE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TOKEN_ERRO


Rules useless in grammar

   86 io_list: expression more_io_list

   87 more_io_list: ',' expression more_io_list
   88             | %empty


Rules useless in parser due to conflicts

   19 declare_new_type: %empty

   22 functions: %empty


State 0 conflicts: 6 shift/reduce, 7 reduce/reduce
State 8 conflicts: 6 shift/reduce, 7 reduce/reduce
State 10 conflicts: 6 shift/reduce, 7 reduce/reduce
State 11 conflicts: 6 shift/reduce, 7 reduce/reduce
State 45 conflicts: 1 reduce/reduce
State 46 conflicts: 1 reduce/reduce
State 84 conflicts: 1 reduce/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 135 conflicts: 14 shift/reduce
State 136 conflicts: 14 shift/reduce
State 137 conflicts: 2 shift/reduce
State 138 conflicts: 2 shift/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 141 conflicts: 2 shift/reduce
State 142 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declare_global_var program
    2        | declare_new_type program
    3        | functions program
    4        | %empty

    5 declare_global_var: var_type TK_IDENTIFICADOR ';'
    6                   | TK_PR_STATIC var_type TK_IDENTIFICADOR
    7                   | var_type TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'

    8 var_type: TK_PR_INT
    9         | TK_PR_FLOAT
   10         | TK_PR_CHAR
   11         | TK_PR_BOOL
   12         | TK_PR_STRING

   13 lit_type: TK_LIT_INT
   14         | TK_LIT_FLOAT
   15         | TK_LIT_FALSE
   16         | TK_LIT_TRUE
   17         | TK_LIT_CHAR
   18         | TK_LIT_STRING

   19 declare_new_type: %empty

   20 functions: var_type TK_IDENTIFICADOR '(' params ')' body
   21          | TK_PR_STATIC var_type TK_IDENTIFICADOR '(' params ')' body
   22          | %empty

   23 params: var_type TK_IDENTIFICADOR more_params
   24       | TK_PR_CONST var_type TK_IDENTIFICADOR more_params
   25       | %empty

   26 more_params: ',' var_type TK_IDENTIFICADOR more_params
   27            | ',' TK_PR_CONST var_type TK_IDENTIFICADOR more_params
   28            | %empty

   29 body: block

   30 block: '{' commands '}'

   31 commands: command ';' commands
   32         | %empty

   33 command: local_var
   34        | block
   35        | attributed
   36        | return
   37        | input
   38        | output
   39        | callback
   40        | control
   41        | %empty

   42 local_var: declare_local_var '<' TK_IDENTIFICADOR
   43          | declare_local_var '<' lit_type
   44          | declare_local_var

   45 declare_local_var: var_type TK_IDENTIFICADOR
   46                  | TK_PR_STATIC var_type TK_IDENTIFICADOR
   47                  | TK_PR_STATIC TK_PR_CONST var_type TK_IDENTIFICADOR

   48 attributed: TK_IDENTIFICADOR '=' expression
   49           | TK_IDENTIFICADOR '[' expression ']' '=' expression

   50 return: TK_PR_RETURN TK_IDENTIFICADOR

   51 input: TK_PR_INPUT fparams

   52 output: TK_PR_OUTPUT fparams

   53 callback: TK_IDENTIFICADOR '(' fparams ')'

   54 fparams: expression more_fparams
   55        | %empty

   56 more_fparams: ',' expression more_fparams
   57             | %empty

   58 expression: TK_IDENTIFICADOR
   59           | TK_IDENTIFICADOR '[' expression ']'
   60           | TK_LIT_INT
   61           | TK_LIT_FLOAT
   62           | TK_LIT_TRUE
   63           | TK_LIT_FALSE
   64           | TK_LIT_CHAR
   65           | TK_LIT_STRING
   66           | callback
   67           | '(' expression ')'
   68           | expression '+' expression
   69           | expression '-' expression
   70           | expression '*' expression
   71           | expression '/' expression
   72           | expression '>' expression
   73           | expression '<' expression
   74           | expression TK_OC_LE expression
   75           | expression TK_OC_GE expression
   76           | expression TK_OC_EQ expression
   77           | expression TK_OC_NE expression
   78           | expression TK_OC_AND expression
   79           | expression TK_OC_OR expression
   80           | expression TK_OC_SL expression
   81           | expression TK_OC_SR expression
   82           | %empty

   83 control: TK_PR_IF '(' expression ')' TK_PR_THEN block
   84        | TK_PR_IF '(' expression ')' TK_PR_THEN block TK_PR_ELSE block
   85        | TK_PR_FOREACH '(' TK_IDENTIFICADOR ':' ')' block


Terminals, with rules where they appear

$end (0) 0
'(' (40) 20 21 53 67 83 84 85
')' (41) 20 21 53 67 83 84 85
'*' (42) 70
'+' (43) 68
',' (44) 26 27 56
'-' (45) 69
'/' (47) 71
':' (58) 85
';' (59) 5 7 31
'<' (60) 42 43 73
'=' (61) 48 49
'>' (62) 72
'[' (91) 7 49 59
']' (93) 7 49 59
'{' (123) 30
'}' (125) 30
error (256)
TK_PR_INT (258) 8
TK_PR_FLOAT (259) 9
TK_PR_BOOL (260) 11
TK_PR_CHAR (261) 10
TK_PR_STRING (262) 12
TK_PR_IF (263) 83 84
TK_PR_THEN (264) 83 84
TK_PR_ELSE (265) 84
TK_PR_WHILE (266)
TK_PR_DO (267)
TK_PR_INPUT (268) 51
TK_PR_OUTPUT (269) 52
TK_PR_RETURN (270) 50
TK_PR_CONST (271) 24 27 47
TK_PR_STATIC (272) 6 21 46 47
TK_PR_FOREACH (273) 85
TK_PR_FOR (274)
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277)
TK_PR_CONTINUE (278)
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_OC_LE (283) 74
TK_OC_GE (284) 75
TK_OC_EQ (285) 76
TK_OC_NE (286) 77
TK_OC_AND (287) 78
TK_OC_OR (288) 79
TK_OC_SL (289) 80
TK_OC_SR (290) 81
TK_LIT_INT (291) 7 13 60
TK_LIT_FLOAT (292) 14 61
TK_LIT_FALSE (293) 15 63
TK_LIT_TRUE (294) 16 62
TK_LIT_CHAR (295) 17 64
TK_LIT_STRING (296) 18 65
TK_IDENTIFICADOR (297) 5 6 7 20 21 23 24 26 27 42 45 46 47 48 49 50
    53 58 59 85
TOKEN_ERRO (298)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1 2 3 4, on right: 0 1 2 3
declare_global_var (62)
    on left: 5 6 7, on right: 1
var_type (63)
    on left: 8 9 10 11 12, on right: 5 6 7 20 21 23 24 26 27 45 46
    47
lit_type (64)
    on left: 13 14 15 16 17 18, on right: 43
declare_new_type (65)
    on left: 19, on right: 2
functions (66)
    on left: 20 21 22, on right: 3
params (67)
    on left: 23 24 25, on right: 20 21
more_params (68)
    on left: 26 27 28, on right: 23 24 26 27
body (69)
    on left: 29, on right: 20 21
block (70)
    on left: 30, on right: 29 34 83 84 85
commands (71)
    on left: 31 32, on right: 30 31
command (72)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31
local_var (73)
    on left: 42 43 44, on right: 33
declare_local_var (74)
    on left: 45 46 47, on right: 42 43 44
attributed (75)
    on left: 48 49, on right: 35
return (76)
    on left: 50, on right: 36
input (77)
    on left: 51, on right: 37
output (78)
    on left: 52, on right: 38
callback (79)
    on left: 53, on right: 39 66
fparams (80)
    on left: 54 55, on right: 51 52 53
more_fparams (81)
    on left: 56 57, on right: 54 56
expression (82)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76 77 78 79 80 81 82, on right: 48 49 54 56 59 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 83 84
control (83)
    on left: 83 84 85, on right: 40


State 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $end          reduce using rule 4 (program)
    $end          [reduce using rule 19 (declare_new_type)]
    $end          [reduce using rule 22 (functions)]
    TK_PR_INT     [reduce using rule 19 (declare_new_type)]
    TK_PR_INT     [reduce using rule 22 (functions)]
    TK_PR_FLOAT   [reduce using rule 19 (declare_new_type)]
    TK_PR_FLOAT   [reduce using rule 22 (functions)]
    TK_PR_BOOL    [reduce using rule 19 (declare_new_type)]
    TK_PR_BOOL    [reduce using rule 22 (functions)]
    TK_PR_CHAR    [reduce using rule 19 (declare_new_type)]
    TK_PR_CHAR    [reduce using rule 22 (functions)]
    TK_PR_STRING  [reduce using rule 19 (declare_new_type)]
    TK_PR_STRING  [reduce using rule 22 (functions)]
    TK_PR_STATIC  [reduce using rule 19 (declare_new_type)]
    TK_PR_STATIC  [reduce using rule 22 (functions)]
    $default      reduce using rule 4 (program)

    program             go to state 7
    declare_global_var  go to state 8
    var_type            go to state 9
    declare_new_type    go to state 10
    functions           go to state 11


State 1

    8 var_type: TK_PR_INT .

    $default  reduce using rule 8 (var_type)


State 2

    9 var_type: TK_PR_FLOAT .

    $default  reduce using rule 9 (var_type)


State 3

   11 var_type: TK_PR_BOOL .

    $default  reduce using rule 11 (var_type)


State 4

   10 var_type: TK_PR_CHAR .

    $default  reduce using rule 10 (var_type)


State 5

   12 var_type: TK_PR_STRING .

    $default  reduce using rule 12 (var_type)


State 6

    6 declare_global_var: TK_PR_STATIC . var_type TK_IDENTIFICADOR
   21 functions: TK_PR_STATIC . var_type TK_IDENTIFICADOR '(' params ')' body

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    var_type  go to state 12


State 7

    0 $accept: program . $end

    $end  shift, and go to state 13


State 8

    1 program: declare_global_var . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $end          reduce using rule 4 (program)
    $end          [reduce using rule 19 (declare_new_type)]
    $end          [reduce using rule 22 (functions)]
    TK_PR_INT     [reduce using rule 19 (declare_new_type)]
    TK_PR_INT     [reduce using rule 22 (functions)]
    TK_PR_FLOAT   [reduce using rule 19 (declare_new_type)]
    TK_PR_FLOAT   [reduce using rule 22 (functions)]
    TK_PR_BOOL    [reduce using rule 19 (declare_new_type)]
    TK_PR_BOOL    [reduce using rule 22 (functions)]
    TK_PR_CHAR    [reduce using rule 19 (declare_new_type)]
    TK_PR_CHAR    [reduce using rule 22 (functions)]
    TK_PR_STRING  [reduce using rule 19 (declare_new_type)]
    TK_PR_STRING  [reduce using rule 22 (functions)]
    TK_PR_STATIC  [reduce using rule 19 (declare_new_type)]
    TK_PR_STATIC  [reduce using rule 22 (functions)]
    $default      reduce using rule 4 (program)

    program             go to state 14
    declare_global_var  go to state 8
    var_type            go to state 9
    declare_new_type    go to state 10
    functions           go to state 11


State 9

    5 declare_global_var: var_type . TK_IDENTIFICADOR ';'
    7                   | var_type . TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'
   20 functions: var_type . TK_IDENTIFICADOR '(' params ')' body

    TK_IDENTIFICADOR  shift, and go to state 15


State 10

    2 program: declare_new_type . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $end          reduce using rule 4 (program)
    $end          [reduce using rule 19 (declare_new_type)]
    $end          [reduce using rule 22 (functions)]
    TK_PR_INT     [reduce using rule 19 (declare_new_type)]
    TK_PR_INT     [reduce using rule 22 (functions)]
    TK_PR_FLOAT   [reduce using rule 19 (declare_new_type)]
    TK_PR_FLOAT   [reduce using rule 22 (functions)]
    TK_PR_BOOL    [reduce using rule 19 (declare_new_type)]
    TK_PR_BOOL    [reduce using rule 22 (functions)]
    TK_PR_CHAR    [reduce using rule 19 (declare_new_type)]
    TK_PR_CHAR    [reduce using rule 22 (functions)]
    TK_PR_STRING  [reduce using rule 19 (declare_new_type)]
    TK_PR_STRING  [reduce using rule 22 (functions)]
    TK_PR_STATIC  [reduce using rule 19 (declare_new_type)]
    TK_PR_STATIC  [reduce using rule 22 (functions)]
    $default      reduce using rule 4 (program)

    program             go to state 16
    declare_global_var  go to state 8
    var_type            go to state 9
    declare_new_type    go to state 10
    functions           go to state 11


State 11

    3 program: functions . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $end          reduce using rule 4 (program)
    $end          [reduce using rule 19 (declare_new_type)]
    $end          [reduce using rule 22 (functions)]
    TK_PR_INT     [reduce using rule 19 (declare_new_type)]
    TK_PR_INT     [reduce using rule 22 (functions)]
    TK_PR_FLOAT   [reduce using rule 19 (declare_new_type)]
    TK_PR_FLOAT   [reduce using rule 22 (functions)]
    TK_PR_BOOL    [reduce using rule 19 (declare_new_type)]
    TK_PR_BOOL    [reduce using rule 22 (functions)]
    TK_PR_CHAR    [reduce using rule 19 (declare_new_type)]
    TK_PR_CHAR    [reduce using rule 22 (functions)]
    TK_PR_STRING  [reduce using rule 19 (declare_new_type)]
    TK_PR_STRING  [reduce using rule 22 (functions)]
    TK_PR_STATIC  [reduce using rule 19 (declare_new_type)]
    TK_PR_STATIC  [reduce using rule 22 (functions)]
    $default      reduce using rule 4 (program)

    program             go to state 17
    declare_global_var  go to state 8
    var_type            go to state 9
    declare_new_type    go to state 10
    functions           go to state 11


State 12

    6 declare_global_var: TK_PR_STATIC var_type . TK_IDENTIFICADOR
   21 functions: TK_PR_STATIC var_type . TK_IDENTIFICADOR '(' params ')' body

    TK_IDENTIFICADOR  shift, and go to state 18


State 13

    0 $accept: program $end .

    $default  accept


State 14

    1 program: declare_global_var program .

    $default  reduce using rule 1 (program)


State 15

    5 declare_global_var: var_type TK_IDENTIFICADOR . ';'
    7                   | var_type TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ';'
   20 functions: var_type TK_IDENTIFICADOR . '(' params ')' body

    '['  shift, and go to state 19
    '('  shift, and go to state 20
    ';'  shift, and go to state 21


State 16

    2 program: declare_new_type program .

    $default  reduce using rule 2 (program)


State 17

    3 program: functions program .

    $default  reduce using rule 3 (program)


State 18

    6 declare_global_var: TK_PR_STATIC var_type TK_IDENTIFICADOR .
   21 functions: TK_PR_STATIC var_type TK_IDENTIFICADOR . '(' params ')' body

    '('  shift, and go to state 22

    $default  reduce using rule 6 (declare_global_var)


State 19

    7 declare_global_var: var_type TK_IDENTIFICADOR '[' . TK_LIT_INT ']' ';'

    TK_LIT_INT  shift, and go to state 23


State 20

   20 functions: var_type TK_IDENTIFICADOR '(' . params ')' body

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 24

    $default  reduce using rule 25 (params)

    var_type  go to state 25
    params    go to state 26


State 21

    5 declare_global_var: var_type TK_IDENTIFICADOR ';' .

    $default  reduce using rule 5 (declare_global_var)


State 22

   21 functions: TK_PR_STATIC var_type TK_IDENTIFICADOR '(' . params ')' body

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 24

    $default  reduce using rule 25 (params)

    var_type  go to state 25
    params    go to state 27


State 23

    7 declare_global_var: var_type TK_IDENTIFICADOR '[' TK_LIT_INT . ']' ';'

    ']'  shift, and go to state 28


State 24

   24 params: TK_PR_CONST . var_type TK_IDENTIFICADOR more_params

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    var_type  go to state 29


State 25

   23 params: var_type . TK_IDENTIFICADOR more_params

    TK_IDENTIFICADOR  shift, and go to state 30


State 26

   20 functions: var_type TK_IDENTIFICADOR '(' params . ')' body

    ')'  shift, and go to state 31


State 27

   21 functions: TK_PR_STATIC var_type TK_IDENTIFICADOR '(' params . ')' body

    ')'  shift, and go to state 32


State 28

    7 declare_global_var: var_type TK_IDENTIFICADOR '[' TK_LIT_INT ']' . ';'

    ';'  shift, and go to state 33


State 29

   24 params: TK_PR_CONST var_type . TK_IDENTIFICADOR more_params

    TK_IDENTIFICADOR  shift, and go to state 34


State 30

   23 params: var_type TK_IDENTIFICADOR . more_params

    ','  shift, and go to state 35

    $default  reduce using rule 28 (more_params)

    more_params  go to state 36


State 31

   20 functions: var_type TK_IDENTIFICADOR '(' params ')' . body

    '{'  shift, and go to state 37

    body   go to state 38
    block  go to state 39


State 32

   21 functions: TK_PR_STATIC var_type TK_IDENTIFICADOR '(' params ')' . body

    '{'  shift, and go to state 37

    body   go to state 40
    block  go to state 39


State 33

    7 declare_global_var: var_type TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';' .

    $default  reduce using rule 7 (declare_global_var)


State 34

   24 params: TK_PR_CONST var_type TK_IDENTIFICADOR . more_params

    ','  shift, and go to state 35

    $default  reduce using rule 28 (more_params)

    more_params  go to state 41


State 35

   26 more_params: ',' . var_type TK_IDENTIFICADOR more_params
   27            | ',' . TK_PR_CONST var_type TK_IDENTIFICADOR more_params

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 42

    var_type  go to state 43


State 36

   23 params: var_type TK_IDENTIFICADOR more_params .

    $default  reduce using rule 23 (params)


State 37

   30 block: '{' . commands '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 44
    TK_PR_INPUT       shift, and go to state 45
    TK_PR_OUTPUT      shift, and go to state 46
    TK_PR_RETURN      shift, and go to state 47
    TK_PR_STATIC      shift, and go to state 48
    TK_PR_FOREACH     shift, and go to state 49
    TK_IDENTIFICADOR  shift, and go to state 50
    '{'               shift, and go to state 37

    ';'       reduce using rule 41 (command)
    $default  reduce using rule 32 (commands)

    var_type           go to state 51
    block              go to state 52
    commands           go to state 53
    command            go to state 54
    local_var          go to state 55
    declare_local_var  go to state 56
    attributed         go to state 57
    return             go to state 58
    input              go to state 59
    output             go to state 60
    callback           go to state 61
    control            go to state 62


State 38

   20 functions: var_type TK_IDENTIFICADOR '(' params ')' body .

    $default  reduce using rule 20 (functions)


State 39

   29 body: block .

    $default  reduce using rule 29 (body)


State 40

   21 functions: TK_PR_STATIC var_type TK_IDENTIFICADOR '(' params ')' body .

    $default  reduce using rule 21 (functions)


State 41

   24 params: TK_PR_CONST var_type TK_IDENTIFICADOR more_params .

    $default  reduce using rule 24 (params)


State 42

   27 more_params: ',' TK_PR_CONST . var_type TK_IDENTIFICADOR more_params

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    var_type  go to state 63


State 43

   26 more_params: ',' var_type . TK_IDENTIFICADOR more_params

    TK_IDENTIFICADOR  shift, and go to state 64


State 44

   83 control: TK_PR_IF . '(' expression ')' TK_PR_THEN block
   84        | TK_PR_IF . '(' expression ')' TK_PR_THEN block TK_PR_ELSE block

    '('  shift, and go to state 65


State 45

   51 input: TK_PR_INPUT . fparams

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    ';'       reduce using rule 55 (fparams)
    ';'       [reduce using rule 82 (expression)]
    $default  reduce using rule 82 (expression)

    callback    go to state 74
    fparams     go to state 75
    expression  go to state 76


State 46

   52 output: TK_PR_OUTPUT . fparams

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    ';'       reduce using rule 55 (fparams)
    ';'       [reduce using rule 82 (expression)]
    $default  reduce using rule 82 (expression)

    callback    go to state 74
    fparams     go to state 77
    expression  go to state 76


State 47

   50 return: TK_PR_RETURN . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 78


State 48

   46 declare_local_var: TK_PR_STATIC . var_type TK_IDENTIFICADOR
   47                  | TK_PR_STATIC . TK_PR_CONST var_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 79

    var_type  go to state 80


State 49

   85 control: TK_PR_FOREACH . '(' TK_IDENTIFICADOR ':' ')' block

    '('  shift, and go to state 81


State 50

   48 attributed: TK_IDENTIFICADOR . '=' expression
   49           | TK_IDENTIFICADOR . '[' expression ']' '=' expression
   53 callback: TK_IDENTIFICADOR . '(' fparams ')'

    '='  shift, and go to state 82
    '['  shift, and go to state 83
    '('  shift, and go to state 84


State 51

   45 declare_local_var: var_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 85


State 52

   34 command: block .

    $default  reduce using rule 34 (command)


State 53

   30 block: '{' commands . '}'

    '}'  shift, and go to state 86


State 54

   31 commands: command . ';' commands

    ';'  shift, and go to state 87


State 55

   33 command: local_var .

    $default  reduce using rule 33 (command)


State 56

   42 local_var: declare_local_var . '<' TK_IDENTIFICADOR
   43          | declare_local_var . '<' lit_type
   44          | declare_local_var .

    '<'  shift, and go to state 88

    $default  reduce using rule 44 (local_var)


State 57

   35 command: attributed .

    $default  reduce using rule 35 (command)


State 58

   36 command: return .

    $default  reduce using rule 36 (command)


State 59

   37 command: input .

    $default  reduce using rule 37 (command)


State 60

   38 command: output .

    $default  reduce using rule 38 (command)


State 61

   39 command: callback .

    $default  reduce using rule 39 (command)


State 62

   40 command: control .

    $default  reduce using rule 40 (command)


State 63

   27 more_params: ',' TK_PR_CONST var_type . TK_IDENTIFICADOR more_params

    TK_IDENTIFICADOR  shift, and go to state 89


State 64

   26 more_params: ',' var_type TK_IDENTIFICADOR . more_params

    ','  shift, and go to state 35

    $default  reduce using rule 28 (more_params)

    more_params  go to state 90


State 65

   83 control: TK_PR_IF '(' . expression ')' TK_PR_THEN block
   84        | TK_PR_IF '(' . expression ')' TK_PR_THEN block TK_PR_ELSE block

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    $default  reduce using rule 82 (expression)

    callback    go to state 74
    expression  go to state 91


State 66

   60 expression: TK_LIT_INT .

    $default  reduce using rule 60 (expression)


State 67

   61 expression: TK_LIT_FLOAT .

    $default  reduce using rule 61 (expression)


State 68

   63 expression: TK_LIT_FALSE .

    $default  reduce using rule 63 (expression)


State 69

   62 expression: TK_LIT_TRUE .

    $default  reduce using rule 62 (expression)


State 70

   64 expression: TK_LIT_CHAR .

    $default  reduce using rule 64 (expression)


State 71

   65 expression: TK_LIT_STRING .

    $default  reduce using rule 65 (expression)


State 72

   53 callback: TK_IDENTIFICADOR . '(' fparams ')'
   58 expression: TK_IDENTIFICADOR .
   59           | TK_IDENTIFICADOR . '[' expression ']'

    '['  shift, and go to state 92
    '('  shift, and go to state 84

    $default  reduce using rule 58 (expression)


State 73

   67 expression: '(' . expression ')'

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    $default  reduce using rule 82 (expression)

    callback    go to state 74
    expression  go to state 93


State 74

   66 expression: callback .

    $default  reduce using rule 66 (expression)


State 75

   51 input: TK_PR_INPUT fparams .

    $default  reduce using rule 51 (input)


State 76

   54 fparams: expression . more_fparams
   68 expression: expression . '+' expression
   69           | expression . '-' expression
   70           | expression . '*' expression
   71           | expression . '/' expression
   72           | expression . '>' expression
   73           | expression . '<' expression
   74           | expression . TK_OC_LE expression
   75           | expression . TK_OC_GE expression
   76           | expression . TK_OC_EQ expression
   77           | expression . TK_OC_NE expression
   78           | expression . TK_OC_AND expression
   79           | expression . TK_OC_OR expression
   80           | expression . TK_OC_SL expression
   81           | expression . TK_OC_SR expression

    TK_OC_LE   shift, and go to state 94
    TK_OC_GE   shift, and go to state 95
    TK_OC_EQ   shift, and go to state 96
    TK_OC_NE   shift, and go to state 97
    TK_OC_AND  shift, and go to state 98
    TK_OC_OR   shift, and go to state 99
    TK_OC_SL   shift, and go to state 100
    TK_OC_SR   shift, and go to state 101
    '<'        shift, and go to state 102
    '>'        shift, and go to state 103
    '+'        shift, and go to state 104
    '-'        shift, and go to state 105
    '*'        shift, and go to state 106
    '/'        shift, and go to state 107
    ','        shift, and go to state 108

    $default  reduce using rule 57 (more_fparams)

    more_fparams  go to state 109


State 77

   52 output: TK_PR_OUTPUT fparams .

    $default  reduce using rule 52 (output)


State 78

   50 return: TK_PR_RETURN TK_IDENTIFICADOR .

    $default  reduce using rule 50 (return)


State 79

   47 declare_local_var: TK_PR_STATIC TK_PR_CONST . var_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    var_type  go to state 110


State 80

   46 declare_local_var: TK_PR_STATIC var_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 111


State 81

   85 control: TK_PR_FOREACH '(' . TK_IDENTIFICADOR ':' ')' block

    TK_IDENTIFICADOR  shift, and go to state 112


State 82

   48 attributed: TK_IDENTIFICADOR '=' . expression

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    $default  reduce using rule 82 (expression)

    callback    go to state 74
    expression  go to state 113


State 83

   49 attributed: TK_IDENTIFICADOR '[' . expression ']' '=' expression

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    $default  reduce using rule 82 (expression)

    callback    go to state 74
    expression  go to state 114


State 84

   53 callback: TK_IDENTIFICADOR '(' . fparams ')'

    TK_LIT_INT        shift, and go to state 66
    TK_LIT_FLOAT      shift, and go to state 67
    TK_LIT_FALSE      shift, and go to state 68
    TK_LIT_TRUE       shift, and go to state 69
    TK_LIT_CHAR       shift, and go to state 70
    TK_LIT_STRING     shift, and go to state 71
    TK_IDENTIFICADOR  shift, and go to state 72
    '('               shift, and go to state 73

    ')'       reduce using rule 55 (fparams)
    ')'       [reduce using rule 82 (expression)]
    $default  reduce using rule 82 (expression)

    callback    go to state 74
    fparams     go to state 115
    expression  go to state 76


State 85

   45 declare_local_var: var_type TK_IDENTIFICADOR .

    $default  reduce using rule 45 (declare_local_var)


State 86

   30 block: '{' commands '}' .

    $default  reduce using rule 30 (block)


State 87

   31 commands: command ';' . commands
